typesafe-builders/tests/ui/reject/field_missing_required_2.rs
use typesafe_builders::prelude::*;

//! `Option` is *not* treated as optional.

#[derive(Builder)]
struct Struct {
	x: Option<u8>,
}

fn main() {
	Struct::builder().build();
}
